@startuml

title __V2's Class Diagram__\n

  namespace com.itbird.design {
    namespace adapter {
      namespace listview.v2 {
        interface com.itbird.design.adapter.listview.v2.BaseAdapterV2 {
            {abstract} + getCount()
            {abstract} + getItemView()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace adapter {
      namespace listview.v2 {
        class com.itbird.design.adapter.listview.v2.ItbirdListViewV2 {
            ~ linearLayout : LinearLayout
            ~ mContext : Context
            + ItbirdListViewV2()
            + ItbirdListViewV2()
            + ItbirdListViewV2()
            + ItbirdListViewV2()
            + addView()
            + init()
            + setAdapter()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace adapter {
      namespace listview.v2 {
        class com.itbird.design.adapter.listview.v2.ListAdapterV2 {
            ~ data : List<String>
            ~ mContext : Context
            + ListAdapterV2()
            + getCount()
            + getItemView()
            + setData()
        }
      }
    }
  }
  

  com.itbird.design.adapter.listview.v2.ItbirdListViewV2 -up-|> android.widget.ScrollView
  com.itbird.design.adapter.listview.v2.ItbirdListViewV2 o-- com.itbird.design.adapter.listview.v2.BaseAdapterV2 : adapter
  com.itbird.design.adapter.listview.v2.ListAdapterV2 .up.|> com.itbird.design.adapter.listview.v2.BaseAdapterV2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
